Update Swagger Docs (add more)
